--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "private": true,
   "main": "N/A",
   "scripts": {
-    "deploy": "bundle install && bundle exec jekyll build && gh-pages -d ./_site",
-    "dev": "bundle exec jekyll serve"
+    "start": "bundle exec jekyll serve",
+    "deploy": "bundle install && bundle exec jekyll build && gh-pages -d ./_site"
   },
   "repository": "https://github.com/wix/stylable/tree/master/packages/stylable.io",
   "license": "UNLICENSED",
   "homepage": "https://stylable.io/",
   "author": "Wix.com",
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^3.1.0"
   }
 }
